# rosignite

./: .gitignore  readme.md  rosimage.dockerfile  rosimage_build.sh  run.bash  runquiz.bash
docker/: build_image.sh  container-start.bash  image.dockerfile
exercises/unit04/src/unit_4_services/: CMakeLists.txt
project_sphero/src/my_sphero_topics/: CMakeLists.txt  package.xml
project_sphero/src/my_sphero_topics/launch/: my_sphero_topics.launch
project_sphero/src/my_sphero_topics/mytools/: __init__.py
project_sphero/src/my_sphero_topics/src/: collision_detector.py  node_imu_reader.py  node_odometry_reader.py  node_pub.py  note_vel_cmd_pub.py
project_sphero/src/my_sphero_topics/src/mytools/: __init__.py
quizzes/unit3/src/: subscriber.py
quizzes/unit3/src/topics_quiz/: CMakeLists.txt
quizzes/unit3/topics_quiz/: package.xml
ros_perception_5_days/unit02/src/my_blob_tracking_pkg/: CMakeLists.txt  package.xml  readme.md
ros_perception_5_days/unit02/src/my_blob_tracking_pkg/cfg/: cmvision.yaml
ros_perception_5_days/unit02/src/my_blob_tracking_pkg/color_files/: colors.txt
ros_perception_5_days/unit02/src/my_blob_tracking_pkg/launch/: my_mira_cmvision_tc.launch
ros_perception_5_days/unit02/src/my_blob_tracking_pkg/src/: exercise_u1_2.py
ros_perception_5_days/unit03/src/my_following_line_package/: package.xml  readme.md
ros_perception_5_days/unit04/src/my_object_recognition_pkg/: CMakeLists.txt  package.xml  readme.md
rosbasics5days/project_sphero/src/my_sphero_topics/: CMakeLists.txt
rosbasics5days/unit03/src/topics_quiz/: CMakeLists.txt  package.xml
rosbasics5days/unit04/src/my_custom_srv_msg_pkg/: CMakeLists.txt
rosbasics5days/unit04/src/services_quiz/: CMakeLists.txt
rosbasics5days/unit04/src/services_quiz/launch/: start_bb8_move_custom_service_server.launch  test.launch
rosbasics5days/unit04/src/services_quiz/src/: bb8_move_custom_service_server.py
rosbasics5days/unit04/src/services_quiz/srv/: MyCustomServiceMessage.srv
rosbasics5days/unit04/src/unit_4_services/: CMakeLists.txt  package.xml
rosbasics5days/unit05/src/actions_quiz/: CMakeLists.txt
rosbasics5days/unit05/src/chapter_08/: CMakeLists.txt  package.xml
rosbasics5days/unit05/src/chapter_09/: CMakeLists.txt  package.xml
rosbasics5days/unit05/src/chapter_09/launch/: exercise_5_11.launch  exercise_5_13.launch
roscontrol101/unit03/src/my_robot_control/: CMakeLists.txt  package.xml
roscontrol101/unit04/src/my_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
roscontrol101/unit04/src/my_controller/config/: my_controller.yaml
roscontrol101/unit04/src/my_controller/launch/: my_controller.launch
roscontrol101/unit04/src/my_controller/src/: my_controller.cpp
roscontrol101/unit05/src/project_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
roscontrol101/unit05/src/project_controller/config/: ur_control.yaml
roscontrol101/unit05/src/project_controller/launch/: quiz_control_custom.launch
roscontrol101/unit05/src/project_controller/src/: my_controller.cpp
roscontrol101/unit05/src/quiz_control/: CMakeLists.txt  package.xml
rosindustrial101/: readme.md
rosindustrial101/unit03/: readme.md
rosindustrial101/unit03/src/my_robot_description/: CMakeLists.txt  package.xml
rosindustrial101/unit03/src/myrobot_moveit_config/: .setup_assistant  CMakeLists.txt
rosindustrial101/unit04/: readme.md
rosindustrial101/unit04/src/my_motion_scripts/: CMakeLists.txt  package.xml
rosindustrial101/unit04/src/myrobot_moveit_config/: package.xml
rosindustrial101/unit04/src/sia10f_description/: CMakeLists.txt
rosindustrial101/unit05/src/my_moveit_package/: .setup_assistant  CMakeLists.txt  package.xml
rosindustrial101/unit05/src/ur_description/: CMakeLists.txt
rosindustrial101/unit05/src/workspace_description/: CMakeLists.txt
smach/catkinws/src/statemachines/: CMakeLists.txt  package.xml
tf101/src/unit03/: CMakeLists.txt  package.xml
tf101/src/unit03/src/: multiple_broadcatser.py
tf101/unit03/src/tfpubsub/: CMakeLists.txt  package.xml
unit04/src/my_custom_srv_msg_pkg/: package.xml
unit04/src/services_quiz/: CMakeLists.txt  package.xml
unit04/src/unit_4_services/: package.xml
unit05/src/actions_quiz/: CMakeLists.txt  package.xml
unit05/src/chapter_08/: CMakeLists.txt  package.xml
unit05/src/chapter_09/: CMakeLists.txt
urdf/unit03/: Readme.md
(+160 files in other folders)
