<?xml version="1.0"?>
<package format="2">
  <name>my_blob_tracking_pkg</name>
  <version>0.0.0</version>
  <description>The my_blob_tracking_pkg package</description>
  <maintainer email="Administrator@todo.todo">Administrator</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
